@@ -1,6 +1,8 @@
 package com.zephyr.scraper.browser.composer.enricher.impl;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.Lists;
 import com.google.common.net.HttpHeaders;
 import com.zephyr.scraper.browser.composer.enricher.HeadersProvider;
 import com.zephyr.scraper.domain.RequestContext;
@@ -16,9 +18,9 @@ public class AjaxHeadersProvider implements HeadersProvider {
     @Override
     public Map<String, List<String>> provide(RequestContext context) {
         return ImmutableMap.<String, List<String>>builder()
-                .put(HttpHeaders.ACCEPT, List.of(ACCEPT))
-                .put(HttpHeaders.HOST, List.of(context.getBaseUrl()))
-                .put(HttpHeaders.ORIGIN, List.of(context.getBaseUrl()))
+                .put(HttpHeaders.ACCEPT, ImmutableList.of(ACCEPT))
+                .put(HttpHeaders.HOST, ImmutableList.of(context.getBaseUrl()))
+                .put(HttpHeaders.ORIGIN, ImmutableList.of(context.getBaseUrl()))
                 .build();
     }
 }
