@@ -1,5 +1,6 @@
 package com.zephyr.scraper.browser.composer.enricher.impl;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.net.HttpHeaders;
 import com.zephyr.scraper.browser.composer.enricher.HeadersProvider;
@@ -18,8 +19,8 @@ public class HtmlHeadersProvider implements HeadersProvider {
     @Override
     public Map<String, List<String>> provide(RequestContext context) {
         return ImmutableMap.<String, List<String>>builder()
-                .put(HttpHeaders.ACCEPT, List.of(ACCEPT))
-                .put(UPGRADE_INSECURE_REQUESTS, List.of(TRUE))
+                .put(HttpHeaders.ACCEPT, ImmutableList.of(ACCEPT))
+                .put(UPGRADE_INSECURE_REQUESTS, ImmutableList.of(TRUE))
                 .build();
     }
 }
