@@ -1,5 +1,6 @@
 package com.zephyr.scraper.browser.composer.enricher.impl;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.net.HttpHeaders;
 import com.zephyr.scraper.domain.RequestContext;
@@ -12,7 +13,7 @@ import org.mockito.junit.MockitoJUnitRunner;
 import java.util.List;
 import java.util.Map;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
 import static org.mockito.Mockito.when;
 
 @RunWith(MockitoJUnitRunner.class)
@@ -37,9 +38,9 @@ public class AjaxHeadersProviderTest {
 
     private Map<String, List<String>> expected() {
         return ImmutableMap.<String, List<String>>builder()
-                .put(HttpHeaders.ACCEPT, List.of(ACCEPT))
-                .put(HttpHeaders.HOST, List.of(BASE_URL))
-                .put(HttpHeaders.ORIGIN, List.of(BASE_URL))
+                .put(HttpHeaders.ACCEPT, ImmutableList.of(ACCEPT))
+                .put(HttpHeaders.HOST, ImmutableList.of(BASE_URL))
+                .put(HttpHeaders.ORIGIN, ImmutableList.of(BASE_URL))
                 .build();
     }
 }
