@@ -1,5 +1,6 @@
 package com.zephyr.scraper.browser.composer.impl;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.zephyr.scraper.browser.composer.managers.HeadersManager;
 import com.zephyr.scraper.domain.RequestContext;
@@ -19,9 +20,9 @@ import static org.mockito.Mockito.when;
 @RunWith(MockitoJUnitRunner.class)
 public class HeadersManagerComposerImplTest {
     private static final String FIRST_KEY = "FIRST_KEY";
-    private static final List<String> FIRST_VALUE = List.of("FIRST_VALUE");
+    private static final List<String> FIRST_VALUE = ImmutableList.of("FIRST_VALUE");
     private static final String SECOND_KEY = "SECOND_KEY";
-    private static final List<String> SECOND_VALUE = List.of("SECOND_VALUE");
+    private static final List<String> SECOND_VALUE = ImmutableList.of("SECOND_VALUE");
 
     private static final RequestContext DOES_NOT_MATTER = null;
 
@@ -40,7 +41,7 @@ public class HeadersManagerComposerImplTest {
         when(firstManager.manage(DOES_NOT_MATTER)).thenReturn(firstHeaders);
         when(secondManager.manage(DOES_NOT_MATTER)).thenReturn(secondHeaders);
 
-        testInstance.setManagers(List.of(firstManager, secondManager));
+        testInstance.setManagers(ImmutableList.of(firstManager, secondManager));
     }
 
     @Test
