@@ -1,5 +1,6 @@
 package com.zephyr.scraper.browser.composer.managers.impl;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.zephyr.scraper.browser.composer.enricher.HeadersProvider;
 import com.zephyr.scraper.domain.RequestContext;
@@ -20,9 +21,9 @@ import static org.mockito.Mockito.when;
 @RunWith(MockitoJUnitRunner.class)
 public class EngineSpecificManagerTest {
     private static final String FIRST_KEY = "FIRST_KEY";
-    private static final List<String> FIRST_VALUE = List.of("FIRST_VALUE");
+    private static final List<String> FIRST_VALUE = ImmutableList.of("FIRST_VALUE");
     private static final String SECOND_KEY = "SECOND_KEY";
-    private static final List<String> SECOND_VALUE = List.of("SECOND_VALUE");
+    private static final List<String> SECOND_VALUE = ImmutableList.of("SECOND_VALUE");
 
     private static final SearchEngine AJAX_ENGINE = SearchEngine.DUCKDUCKGO;
     private static final SearchEngine HTML_ENGINE = SearchEngine.GOOGLE;
